# Banosat

./: .gitignore  CMakeLists.txt  Makefile  README.md  TEST_linkedlist.c  TEST_makefile  arraylist.c  arraylist.h  arraymap.c  arraymap.h  assignment_level.c  assignment_level.h  clause.c  clause.h  context.c  context.h  decide.c  decide.h  engine.c  engine.h  function.h  hashset.c  hashset.h  linkedlist.c  linkedlist.h  literal.c  literal.h  macros.h  parser.c  parser.h  sat.c  test_from_folder.sh  variable.c  variable.h
custom_tests/: c1.cnf  c3.cnf  c4.cnf
doc/: bcp.txt  data_structures.txt  tracking_formula.txt
report/: report.tex
temp_programs/: .gitignore  Makefile  temp_arraymap.c  temp_assign.c  temp_hashset.c  temp_linkedlist.c  temp_unassign.c
